BLD: Ensure that the workflow for publishing a release to PyPI has built and uploaded the code before attempting to publish it

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -38,6 +38,7 @@ jobs:
         retention-days: 1
 
   publish:
+    needs: build
     if: ${{ github.repository == 'slaclab/pydm' }}
     name: Publish release to PyPI
     runs-on: ubuntu-latest
